fixed overflow

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -18,7 +18,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 50px;
+    padding: 0 10px;
     width: 100vw;
     position: fixed;
     z-index: 100;
